package Exceptions;

public class InvalidBookFieldException extends LibraryException {
    public InvalidBookFieldException(String message) {
        super(message);
    }
}
